--- a/README.Rmd
+++ b/README.Rmd
@@ -17,10 +17,13 @@ knitr::opts_chunk$set(
 
 lindia is an extention to ***ggplot2*** to allow easy plotting of linear diagnostic plots:
 ```{r, warning = F, message = F}
+library(MASS)
 data(Cars93)
 cars_lm <- lm(Rev.per.mile ~ Passengers + Length + RPM, data = Cars93)
-
-
 ```
+
+#How to Install
+---
++ From Github:  devtools::install_github("yeukyul/lindia")
 
 
