--- a/README.Rmd
+++ b/README.Rmd
@@ -4,60 +4,80 @@ output:
     variant: markdown_github
 ---
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE, cache = TRUE,
   comment = "# ",
   fig.path = "figures/README-"
 )
+library(MASS)
+library(ggplot2)
+library(lindia)
+data(Cars93)
+
 ```
 
 
 #lindia
 
-lindia is an extention to ***ggplot2*** to provide a streamlined plotting feature of linear diagnostic plots. The following demonstrates basic plotting features of `lindia`. All functions in `lindia` takes in lm object and return linear diagnostic plots in types of `ggplot`. 
+lindia is an extention to ***ggplot2*** to provide streamlined plotting features of linear diagnostic plots. The following demonstrates basic plotting features of `lindia`. All functions in `lindia` takes in an lm object and return linear diagnostic plots in types of `ggplot`. The following code demonstrates how you can create a simple linear model from `Cars93` dataset, then use a call to `lindia::gg_diagnose` to visualize overall features of the distribution.
 
 ```{r, warning = F, message = F}
-library(MASS)
-library(ggplot2)
-library(lindia)
-data(Cars93)
+# create linear model
 cars_lm <- lm(Rev.per.mile ~ Passengers + Length + RPM, data = Cars93)
+
+# visualize diagnostic plots with a call to lindia
 gg_diagnose(cars_lm)
 ```
 
-All themes in `lindia` plots can be overwritten by a call to `ggplot::theme()`.
+#Installation
 
++ From Github:  `devtools::install_github("yeukyul/lindia")`
 
-```{r, warning = F, message = F}
-gg_reshist(cars_lm) + theme_bw()
-```
-
-Please note that `lindia` does not provide ***all*** diagnostic plots necessary for checking linear model assumptions. Refer to ggpairs to check if multicolinearity assumption has been violated.
 
 #Overview
 Followed are functions implemented in `lindia`:
 
-+ `gg_reshist()`: plotting the histogram of distribution of residuals
-+ `gg_resfitted()`: residual plot of residuals by fitted value
-+ `gg_resX()`: a list of residual plots of all predictors by fitted value (continuous variables only for now. Categorical and interaction terms are developing.)
-+ `gg_qqplot()`: Normaility quantile-quantile plot (QQPlot) with qqline overlayed on top
-+ `gg_boxcox()`: boxcox graph with optimal transformation labeled on graph
-+ `gg_scalelocation()`: scale-location plot (also called spread-location plot).
-+ `gg_resleverage()`: residual vs. leverage plot. (cook distance indicators not implemented for now)
-+ `gg_diagnose()`: all diagnostic plots being layed out on a grid (not functional yet).
++ [`gg_reshist()`](# gg_reshist): plotting the histogram of distribution of residuals
++ [`gg_resfitted()`](# gg_resfitted): residual plot of residuals by fitted value
++ [`gg_resX()`](# gg_resX): a list of residual plots of all predictors by fitted value (continuous variables only for now. Categorical and interaction terms are developing.)
++ [`gg_qqplot()`](# gg_qqplot): Normaility quantile-quantile plot (QQPlot) with qqline overlayed on top
++ [`gg_boxcox()`](# gg_boxcox): boxcox graph with optimal transformation labeled on graph
++ [`gg_scalelocation()`](# gg_scalelocation): scale-location plot (also called spread-location plot).
++ [`gg_resleverage()`](# gg_resleverage): residual vs. leverage plot. (cook distance indicators not implemented for now)
++ [`gg_diagnose()`](# gg_diagnose): all diagnostic plots being layed out on a grid (not functional yet).
 
-`gg_resX()` and `gg_diagnose()` would return multiple plots after a call to the function. By default, they would return one aggregate plot of all diagnostic plots as one arranged grid. If user, however, needs more flexibility in determining graphical elements and inclusion of certain plot, set `plotAll` parameter in the function call to `FALSE`. It will return a list of all plots, which user can manipulate. 
+`gg_resX()` and `gg_diagnose()` would return multiple plots after a call to the function. By default, they would return one aggregate plot of all diagnostic plots as one arranged grid. If user needs more flexibility in determining graphical elements and inclusion/exclustion of certain plots, set `plotAll` parameter in the function call to `FALSE`. It will return a list of all plots,\ which user can manipulate. 
 
 
-In addition, `lindia` provides a `plotAll()` feature that allows users pass in a list of plots and output as a formatted grid of plots using `grid.arrange()` in `gridExtra`.
+An example would as be followed:
+```{r, warning = F, message = F}
+plots <- gg_diagnose(cars_lm, plotAll = FALSE)
+names(plots)
+exclude_plots <- plots[-c(1, 3) ]    #exclude certain diagnostics plots
+include_plots <- plots[c(1, 3)]      # include certain diagnostics plots
+```
 
+
+In addition, `lindia` provides a `plot_all()` feature that allows users pass in a list of plots and output as a formatted grid of plots using `grid.arrange()` in `gridExtra`.
+```{r, warning = F, message = F}
+plot_all(exclude_plots)
+```
+
+All graphical styles returned by lindia graphing function can be overwritten by a call to `ggplot::theme()" (except `gg_resX()` and `gg_diagnose()`, which would return a list rather than a single ggplot object).
+```{r, warning = F, message = F}
+gg_resfitted(cars_lm) + theme_bw()
+```
 
 #Functions in Lindia
 
-###gg_reshist
+---
 
-Plot distribution of residuals in histograms. Number of bins picked by default.
+The following gives a brief demonstration of how to use the functions provided in `lindia`.
+
+#gg_reshist
+
+Plots distribution of residuals in histograms. Number of bins picked by default.
 ```{r, warning = F, message = F}
 gg_reshist(cars_lm)
 ```
@@ -67,29 +87,80 @@ Can also specify number of bins using `bins` argument:
 gg_reshist(cars_lm, bins = 20)
 ```
 
-###gg_resfitted
+#gg_resX
+
+Plots residual plots of all predictors vs. residuals and return all plots as one plot that is arranged by package `gridExtra`. If a variable is continuous, it would be plotted as scatterplot.  If a given variable is category is categorical, lindia would plot boxplot for that variable. ***User have to pass in original dataset as data parameter for the boxplots to show, otherwise lindia would ignore plot.***
+```{r, warning = F, message = F}
+cars_lm_2 <- lm(Price ~ Passengers + Length + RPM + Origin, data = Cars93)
+gg_resX(cars_lm, data = Cars93)
+```
+
+
+`lindia` can also handle linear models with interaction terms.
+
+```{r, warning = F, message = F}
+cars_lm_inter <- lm(Price ~ Passengers * Length, data = Cars93)
+gg_resX(cars_lm_inter, data = Cars93)
+```
+
+
+#gg_resfitted
+
 Plots residual against fitted value.
 ```{r, warning = F, message = F}
 gg_resfitted(cars_lm)
 ```
 
 
-###gg_boxocx
+##gg_qqplot
 
-Plots boxcox graph of given lm object, with labels showing optimal transforming power. Can hide labels by setting `showlambda` to `FALSE`.
+Plots quantile quantile plot of a linear model, with qqline overlayed on top.
+
+```{r, warning = F, message = F}
+gg_qqplot(cars_lm)
+```
+
+#gg_boxocx
+
+Plots boxcox graph of given lm object, with labels showing optimal transforming power of response variable using box-cox transformation. Can hide labels on graph by setting `showlambda` to `FALSE`.
 ```{r, warning = F, message = F}
 gg_boxcox(cars_lm)
 ```
+
+#gg_scalelocation
+
+Plots scale location graph of linear model.
+
+```{r, warning = F, message = F}
+gg_scalelocation(cars_lm)
+```
+
+
+#gg_resleverage
+
+Plots residual vs. leverage of data points to detect outliers using cook's distance.
+
+```{r, warning = F, message = F}
+gg_resleverage(cars_lm)
+```
+
+
+#gg_diagnose
+
+An aggregate plot of all diagnostics plots, layed out in one panel as demonstrated in the beginning of read me. User can set `theme` parameter to a specific theme type to apply to all plots in the panel. Notice that same as [`gg_resX`](# gg_resX), user would have to pass in original dataset of the lm_object in order for residual plots of categorical variables to be plotted.
+
+```{r, warning = F, message = F}
+gg_diagnose(cars_lm_2, theme = theme_bw(), data = Cars93)
+```
+
+If user set `plotAll` parameter to false, gg_diagnose would return a list of ggplot objects which user can manipulate.
 
 #Package Dependency
 
 Lindia is built on top of the following few packages:
 
-+ `ggplot2`
++ `ggplot2`: ver 2.1.0
 
-+ `gridExtra`
-
-#How to Install
-+ From Github:  `devtools::install_github("yeukyul/lindia")`
++ `gridExtra`: ver 2.1.1
 
 
