--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ data(Cars93)
 
 lindia is an extention to ***ggplot2*** to provide streamlined plotting features of linear diagnostic plots. The following demonstrates basic plotting features of `lindia`. All functions in `lindia` takes in an lm object and return linear diagnostic plots in types of `ggplot`. The following code demonstrates how you can create a simple linear model from `Cars93` dataset, then use a call to `lindia::gg_diagnose` to visualize overall features of the distribution.
 
-```{r, warning = F, message = F}
+```{r, warning = F, message = F, fig.width = 8, fig.height = 7}
 # create linear model
 cars_lm <- lm(Rev.per.mile ~ Passengers + Length + RPM, data = Cars93)
 
