--- a/README.Rmd
+++ b/README.Rmd
@@ -161,10 +161,10 @@ An aggregate plot of all diagnostics plots, layed out on one panel as demonstrat
 gg_diagnose(cars_lm_2, theme = theme_bw())
 ```
 
-If user set `plotAll` parameter to false, `gg_diagnose` would return a list of ggplot objects which user can manipulate. `lindia` also provides a handy trick that allows user to scale all point sizes and linewidth at once, using the parameter `scale.factor`.
+If user set `plotAll` parameter to false, `gg_diagnose` would return a list of ggplot objects which user can manipulate. `lindia` also provides a handy trick that allows user to scale all point sizes and linewidth at once, using the parameter `scale.factor`. Followed is an extreme example by setting `scale.factor` to 0.3.
 
 ```{r, warning = F, message = F, fig.width = 12, fig.height = 8}
-gg_diagnose(cars_lm_2, scale.factor = 2)
+gg_diagnose(cars_lm_2, scale.factor = 0.3)
 ```
 
 
