--- a/README.Rmd
+++ b/README.Rmd
@@ -40,13 +40,13 @@ Followed are functions implemented in `lindia`:
 
 + [`gg_reshist()`](#gg_reshist): plotting the histogram of distribution of residuals
 + [`gg_resfitted()`](#gg_resfitted): residual plot of residuals by fitted value
-+ [`gg_resX()`](# gg_resX): a list of residual plots of all predictors by fitted value (continuous variables only for now. Categorical and interaction terms are developing.)
++ [`gg_resX()`](# gg_resX): a list of residual plots of all predictors by fitted value.
 + [`gg_qqplot()`](# gg_qqplot): Normaility quantile-quantile plot (QQPlot) with qqline overlayed on top
 + [`gg_boxcox()`](# gg_boxcox): boxcox graph with optimal transformation labeled on graph
 + [`gg_scalelocation()`](# gg_scalelocation): scale-location plot (also called spread-location plot).
-+ [`gg_resleverage()`](# gg_resleverage): residual vs. leverage plot. (cook distance indicators not implemented for now)
-+ [`gg_diagnose()`](# gg_diagnose): all diagnostic plots being layed out on a grid (not functional yet).
++ [`gg_resleverage()`](# gg_resleverage): residual vs. leverage plot
 + [`gg_cooksd()`](#gg_cooksd): cook's distance plot with potential outliars labeled on top
++ [`gg_diagnose()`](# gg_diagnose): all diagnostic plots being layed out on a grid.
 
 `gg_resX()` and `gg_diagnose()` would return multiple plots after a call to the function. By default, they would return one aggregate plot of all diagnostic plots as one arranged grid. If user needs more flexibility in determining graphical elements and inclusion/exclustion of certain plots, set `plotAll` parameter in the function call to `FALSE`. It will return a list of all plots,\ which user can manipulate. 
 
