--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ data(Cars93)
 
 #lindia
 
-lindia is an extention to **ggplot2**[] to provide streamlined plotting features of linear diagnostic plots (including `lm()` and `glm()`). The following demonstrates basic plotting features of `lindia`. All functions in `lindia` takes in an lm object and returns linear diagnostic plots in forms of `ggplot` object. The following code demonstrates how you can create a simple linear model from `Cars93` dataset, then use a call to `lindia::gg_diagnose()` to visualize overall features of the distribution.
+lindia is an extention to [**ggplot2**](http://ggplot2.org) to provide streamlined plotting features of linear model diagnostic plots. The following demonstrates basic plotting features of `lindia`. All functions in `lindia` takes in an lm object (including `lm()` and `glm()`) and returns linear diagnostic plots in forms of `ggplot` objects. The following code demonstrates how you can create a simple linear model from `Cars93` dataset, then use a call to `lindia::gg_diagnose()` to visualize overall features of the distribution.
 
 ```{r, warning = F, message = F, fig.width = 12, fig.height = 10}
 # create linear model
@@ -38,29 +38,29 @@ gg_diagnose(cars_lm)
 #Overview
 Followed are functions implemented in `lindia`:
 
-+ [`gg_reshist()`](#gg_reshist): plotting the histogram of distribution of residuals
-+ [`gg_resfitted()`](#gg_resfitted): residual plot of residuals by fitted value
-+ [`gg_resX()`](#gg_resX): a list of residual plots of all predictors by fitted value.
++ [`gg_reshist()`](#gg_reshist): Histogram of residuals
++ [`gg_resfitted()`](#gg_resfitted): Residual plot of residuals by fitted value
++ [`gg_resX()`](#gg_resX): All residual plots of all predictors by fitted value, layed out in a grid
 + [`gg_qqplot()`](#gg_qqplot): Normaility quantile-quantile plot (QQPlot) with qqline overlayed on top
-+ [`gg_boxcox()`](#gg_boxcox): boxcox graph with optimal transformation labeled on graph
-+ [`gg_scalelocation()`](#gg_scalelocation): scale-location plot (also called spread-location plot).
-+ [`gg_resleverage()`](#gg_resleverage): residual vs. leverage plot
-+ [`gg_cooksd()`](#gg_cooksd): cook's distance plot with potential outliars labeled on top
-+ [`gg_diagnose()`](#gg_diagnose): all diagnostic plots being layed out on a grid.
++ [`gg_boxcox()`](#gg_boxcox): Boxcox graph with optimal transformation labeled on graph
++ [`gg_scalelocation()`](#gg_scalelocation): Scale-location plot (also called spread-location plot)
++ [`gg_resleverage()`](#gg_resleverage): Residual by leverage plot
++ [`gg_cooksd()`](#gg_cooksd): Cook's distance plot with potential outliars labeled on top
++ [`gg_diagnose()`](#gg_diagnose): All diagnostic plots, layed out in a grid
 
-`gg_resX()` and `gg_diagnose()` would return multiple plots after a call to the function. By default, they would return one aggregate plot of all diagnostic plots as one arranged grid. If user needs more flexibility in determining graphical elements and inclusion/exclustion of certain plots, set `plotAll` parameter in the function call to `FALSE`. It will return a list of all plots, which user can manipulate. 
+`gg_resX()` and `gg_diagnose()` would return multiple plots after a call to the function. By default, they would return one aggregate plot of all diagnostic plots as one arranged grid. If user needs more flexibility in determining graphical elements and inclusion/exclusion of certain plots, set `plotAll` parameter in the function call to `FALSE`. It will return a list of all plots, which user can manipulate. 
 
 
 An example would as be followed:
 ```{r, warning = F, message = F}
 plots <- gg_diagnose(cars_lm, plotAll = FALSE)
 names(plots)
-exclude_plots <- plots[-c(1, 3)]    #exclude certain diagnostics plots
+exclude_plots <- plots[-c(1, 3)]    # exclude certain diagnostics plots
 include_plots <- plots[c(1, 3)]      # include certain diagnostics plots
 ```
 
 
-In addition, `lindia` provides a `plot_all()` feature that allows users pass in a list of plots and output as a formatted grid of plots using `grid.arrange()` in `gridExtra`.
+In addition, `lindia` provides a `plot_all()` feature that allows user to pass in a list of plots and output as a formatted grid of plots using `gridExtra::grid.arrange()`.
 ```{r, warning = F, message = F, fig.width = 12, fig.height = 8}
 plot_all(exclude_plots)
 ```
